// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly renders Card component which is located on the favoritesPage which is neither favorite nor premium 1`] = `
<a
  href="/offer/1"
  onClick={[Function]}
  title="To the Wood and stone place offer page"
>
  <article
    className="place-card favorites__card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="place-card__image-wrapper favorites__image-wrapper"
    >
      <img
        alt="Place pic"
        className="place-card__image"
        height="110"
        src="https://htmlacademy-react-3.appspot.com/six-cities/static/hotel/3.jpg"
        width="150"
      />
    </div>
    <div
      className="place-card__info favorites__card-info"
    >
      <div
        className="place-card__price-wrapper"
      >
        <div
          className="place-card__price"
        >
          <b
            className="place-card__price-value"
          >
            €
            80
          </b>
          <span
            className="place-card__price-text"
          >
            / night
          </span>
        </div>
        <button
          className="place-card__bookmark-button button"
          title="To bookmarks"
          type="button"
        >
          <svg
            className="place-card__bookmark-icon"
            height="19"
            width="18"
          >
            <use
              xlinkHref="#icon-bookmark"
            />
          </svg>
          <span
            className="visually-hidden"
          >
            Not in bookmarks
          </span>
        </button>
      </div>
      <div
        className="place-card__rating rating"
      >
        <div
          className="place-card__stars rating__stars"
        >
          <span
            style={
              Object {
                "width": "80%",
              }
            }
          />
          <span
            className="visually-hidden"
          >
            Rating
          </span>
        </div>
      </div>
      <h2
        className="place-card__name"
      >
        Wood and stone place
      </h2>
      <p
        className="place-card__type"
      >
        Private room
      </p>
    </div>
  </article>
</a>
`;

exports[`Correctly renders Card component which is located on the favoritesPage which is not favorite but premium 1`] = `
<a
  href="/offer/0"
  onClick={[Function]}
  title="To the Beautiful luxurious apartment at great location offer page"
>
  <article
    className="place-card favorites__card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="place-card__mark"
    >
      <span>
        Premium
      </span>
    </div>
    <div
      className="place-card__image-wrapper favorites__image-wrapper"
    >
      <img
        alt="Place pic"
        className="place-card__image"
        height="110"
        src="https://htmlacademy-react-3.appspot.com/six-cities/static/hotel/9.jpg"
        width="150"
      />
    </div>
    <div
      className="place-card__info favorites__card-info"
    >
      <div
        className="place-card__price-wrapper"
      >
        <div
          className="place-card__price"
        >
          <b
            className="place-card__price-value"
          >
            €
            120
          </b>
          <span
            className="place-card__price-text"
          >
            / night
          </span>
        </div>
        <button
          className="place-card__bookmark-button button"
          title="To bookmarks"
          type="button"
        >
          <svg
            className="place-card__bookmark-icon"
            height="19"
            width="18"
          >
            <use
              xlinkHref="#icon-bookmark"
            />
          </svg>
          <span
            className="visually-hidden"
          >
            Not in bookmarks
          </span>
        </button>
      </div>
      <div
        className="place-card__rating rating"
      >
        <div
          className="place-card__stars rating__stars"
        >
          <span
            style={
              Object {
                "width": "80%",
              }
            }
          />
          <span
            className="visually-hidden"
          >
            Rating
          </span>
        </div>
      </div>
      <h2
        className="place-card__name"
      >
        Beautiful luxurious apartment at great location
      </h2>
      <p
        className="place-card__type"
      >
        Apartment
      </p>
    </div>
  </article>
</a>
`;

exports[`Correctly renders Card component which is located on the favoritesPage which is not premium but favorite 1`] = `
<a
  href="/offer/2"
  onClick={[Function]}
  title="To the Canal View Prinsengracht offer page"
>
  <article
    className="place-card favorites__card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="place-card__image-wrapper favorites__image-wrapper"
    >
      <img
        alt="Place pic"
        className="place-card__image"
        height="110"
        src="https://htmlacademy-react-3.appspot.com/six-cities/static/hotel/4.jpg"
        width="150"
      />
    </div>
    <div
      className="place-card__info favorites__card-info"
    >
      <div
        className="place-card__price-wrapper"
      >
        <div
          className="place-card__price"
        >
          <b
            className="place-card__price-value"
          >
            €
            132
          </b>
          <span
            className="place-card__price-text"
          >
            / night
          </span>
        </div>
        <button
          className="place-card__bookmark-button button place-card__bookmark-button--active"
          title="In bookmarks"
          type="button"
        >
          <svg
            className="place-card__bookmark-icon"
            height="19"
            width="18"
          >
            <use
              xlinkHref="#icon-bookmark"
            />
          </svg>
          <span
            className="visually-hidden"
          >
            In bookmarks
          </span>
        </button>
      </div>
      <div
        className="place-card__rating rating"
      >
        <div
          className="place-card__stars rating__stars"
        >
          <span
            style={
              Object {
                "width": "80%",
              }
            }
          />
          <span
            className="visually-hidden"
          >
            Rating
          </span>
        </div>
      </div>
      <h2
        className="place-card__name"
      >
        Canal View Prinsengracht
      </h2>
      <p
        className="place-card__type"
      >
        Apartment
      </p>
    </div>
  </article>
</a>
`;

exports[`Correctly renders Card component which is located on the mainPage which is neither favorite nor premium 1`] = `
<a
  href="/offer/1"
  onClick={[Function]}
  title="To the Wood and stone place offer page"
>
  <article
    className="place-card near-places__card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="place-card__image-wrapper near-places__image-wrapper"
    >
      <img
        alt="Place pic"
        className="place-card__image"
        height="200"
        src="https://htmlacademy-react-3.appspot.com/six-cities/static/hotel/3.jpg"
        width="260"
      />
    </div>
    <div
      className="place-card__info"
    >
      <div
        className="place-card__price-wrapper"
      >
        <div
          className="place-card__price"
        >
          <b
            className="place-card__price-value"
          >
            €
            80
          </b>
          <span
            className="place-card__price-text"
          >
            / night
          </span>
        </div>
        <button
          className="place-card__bookmark-button button"
          title="To bookmarks"
          type="button"
        >
          <svg
            className="place-card__bookmark-icon"
            height="19"
            width="18"
          >
            <use
              xlinkHref="#icon-bookmark"
            />
          </svg>
          <span
            className="visually-hidden"
          >
            Not in bookmarks
          </span>
        </button>
      </div>
      <div
        className="place-card__rating rating"
      >
        <div
          className="place-card__stars rating__stars"
        >
          <span
            style={
              Object {
                "width": "80%",
              }
            }
          />
          <span
            className="visually-hidden"
          >
            Rating
          </span>
        </div>
      </div>
      <h2
        className="place-card__name"
      >
        Wood and stone place
      </h2>
      <p
        className="place-card__type"
      >
        Private room
      </p>
    </div>
  </article>
</a>
`;

exports[`Correctly renders Card component which is located on the mainPage which is not favorite but premium 1`] = `
<a
  href="/offer/0"
  onClick={[Function]}
  title="To the Beautiful luxurious apartment at great location offer page"
>
  <article
    className="place-card near-places__card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="place-card__mark"
    >
      <span>
        Premium
      </span>
    </div>
    <div
      className="place-card__image-wrapper near-places__image-wrapper"
    >
      <img
        alt="Place pic"
        className="place-card__image"
        height="200"
        src="https://htmlacademy-react-3.appspot.com/six-cities/static/hotel/9.jpg"
        width="260"
      />
    </div>
    <div
      className="place-card__info"
    >
      <div
        className="place-card__price-wrapper"
      >
        <div
          className="place-card__price"
        >
          <b
            className="place-card__price-value"
          >
            €
            120
          </b>
          <span
            className="place-card__price-text"
          >
            / night
          </span>
        </div>
        <button
          className="place-card__bookmark-button button"
          title="To bookmarks"
          type="button"
        >
          <svg
            className="place-card__bookmark-icon"
            height="19"
            width="18"
          >
            <use
              xlinkHref="#icon-bookmark"
            />
          </svg>
          <span
            className="visually-hidden"
          >
            Not in bookmarks
          </span>
        </button>
      </div>
      <div
        className="place-card__rating rating"
      >
        <div
          className="place-card__stars rating__stars"
        >
          <span
            style={
              Object {
                "width": "80%",
              }
            }
          />
          <span
            className="visually-hidden"
          >
            Rating
          </span>
        </div>
      </div>
      <h2
        className="place-card__name"
      >
        Beautiful luxurious apartment at great location
      </h2>
      <p
        className="place-card__type"
      >
        Apartment
      </p>
    </div>
  </article>
</a>
`;

exports[`Correctly renders Card component which is located on the mainPage which is not premium but favorite 1`] = `
<a
  href="/offer/2"
  onClick={[Function]}
  title="To the Canal View Prinsengracht offer page"
>
  <article
    className="place-card near-places__card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="place-card__image-wrapper near-places__image-wrapper"
    >
      <img
        alt="Place pic"
        className="place-card__image"
        height="200"
        src="https://htmlacademy-react-3.appspot.com/six-cities/static/hotel/4.jpg"
        width="260"
      />
    </div>
    <div
      className="place-card__info"
    >
      <div
        className="place-card__price-wrapper"
      >
        <div
          className="place-card__price"
        >
          <b
            className="place-card__price-value"
          >
            €
            132
          </b>
          <span
            className="place-card__price-text"
          >
            / night
          </span>
        </div>
        <button
          className="place-card__bookmark-button button place-card__bookmark-button--active"
          title="In bookmarks"
          type="button"
        >
          <svg
            className="place-card__bookmark-icon"
            height="19"
            width="18"
          >
            <use
              xlinkHref="#icon-bookmark"
            />
          </svg>
          <span
            className="visually-hidden"
          >
            In bookmarks
          </span>
        </button>
      </div>
      <div
        className="place-card__rating rating"
      >
        <div
          className="place-card__stars rating__stars"
        >
          <span
            style={
              Object {
                "width": "80%",
              }
            }
          />
          <span
            className="visually-hidden"
          >
            Rating
          </span>
        </div>
      </div>
      <h2
        className="place-card__name"
      >
        Canal View Prinsengracht
      </h2>
      <p
        className="place-card__type"
      >
        Apartment
      </p>
    </div>
  </article>
</a>
`;

exports[`Correctly renders Card component which is located on the offerPage which is neither favorite nor premium 1`] = `
<a
  href="/offer/1"
  onClick={[Function]}
  title="To the Wood and stone place offer page"
>
  <article
    className="place-card cities__place-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="place-card__image-wrapper cities__image-wrapper"
    >
      <img
        alt="Place pic"
        className="place-card__image"
        height="200"
        src="https://htmlacademy-react-3.appspot.com/six-cities/static/hotel/3.jpg"
        width="260"
      />
    </div>
    <div
      className="place-card__info"
    >
      <div
        className="place-card__price-wrapper"
      >
        <div
          className="place-card__price"
        >
          <b
            className="place-card__price-value"
          >
            €
            80
          </b>
          <span
            className="place-card__price-text"
          >
            / night
          </span>
        </div>
        <button
          className="place-card__bookmark-button button"
          title="To bookmarks"
          type="button"
        >
          <svg
            className="place-card__bookmark-icon"
            height="19"
            width="18"
          >
            <use
              xlinkHref="#icon-bookmark"
            />
          </svg>
          <span
            className="visually-hidden"
          >
            Not in bookmarks
          </span>
        </button>
      </div>
      <div
        className="place-card__rating rating"
      >
        <div
          className="place-card__stars rating__stars"
        >
          <span
            style={
              Object {
                "width": "80%",
              }
            }
          />
          <span
            className="visually-hidden"
          >
            Rating
          </span>
        </div>
      </div>
      <h2
        className="place-card__name"
      >
        Wood and stone place
      </h2>
      <p
        className="place-card__type"
      >
        Private room
      </p>
    </div>
  </article>
</a>
`;

exports[`Correctly renders Card component which is located on the offerPage which is not favorite but premium 1`] = `
<a
  href="/offer/0"
  onClick={[Function]}
  title="To the Beautiful luxurious apartment at great location offer page"
>
  <article
    className="place-card cities__place-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="place-card__mark"
    >
      <span>
        Premium
      </span>
    </div>
    <div
      className="place-card__image-wrapper cities__image-wrapper"
    >
      <img
        alt="Place pic"
        className="place-card__image"
        height="200"
        src="https://htmlacademy-react-3.appspot.com/six-cities/static/hotel/9.jpg"
        width="260"
      />
    </div>
    <div
      className="place-card__info"
    >
      <div
        className="place-card__price-wrapper"
      >
        <div
          className="place-card__price"
        >
          <b
            className="place-card__price-value"
          >
            €
            120
          </b>
          <span
            className="place-card__price-text"
          >
            / night
          </span>
        </div>
        <button
          className="place-card__bookmark-button button"
          title="To bookmarks"
          type="button"
        >
          <svg
            className="place-card__bookmark-icon"
            height="19"
            width="18"
          >
            <use
              xlinkHref="#icon-bookmark"
            />
          </svg>
          <span
            className="visually-hidden"
          >
            Not in bookmarks
          </span>
        </button>
      </div>
      <div
        className="place-card__rating rating"
      >
        <div
          className="place-card__stars rating__stars"
        >
          <span
            style={
              Object {
                "width": "80%",
              }
            }
          />
          <span
            className="visually-hidden"
          >
            Rating
          </span>
        </div>
      </div>
      <h2
        className="place-card__name"
      >
        Beautiful luxurious apartment at great location
      </h2>
      <p
        className="place-card__type"
      >
        Apartment
      </p>
    </div>
  </article>
</a>
`;

exports[`Correctly renders Card component which is located on the offerPage which is not premium but favorite 1`] = `
<a
  href="/offer/2"
  onClick={[Function]}
  title="To the Canal View Prinsengracht offer page"
>
  <article
    className="place-card cities__place-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="place-card__image-wrapper cities__image-wrapper"
    >
      <img
        alt="Place pic"
        className="place-card__image"
        height="200"
        src="https://htmlacademy-react-3.appspot.com/six-cities/static/hotel/4.jpg"
        width="260"
      />
    </div>
    <div
      className="place-card__info"
    >
      <div
        className="place-card__price-wrapper"
      >
        <div
          className="place-card__price"
        >
          <b
            className="place-card__price-value"
          >
            €
            132
          </b>
          <span
            className="place-card__price-text"
          >
            / night
          </span>
        </div>
        <button
          className="place-card__bookmark-button button place-card__bookmark-button--active"
          title="In bookmarks"
          type="button"
        >
          <svg
            className="place-card__bookmark-icon"
            height="19"
            width="18"
          >
            <use
              xlinkHref="#icon-bookmark"
            />
          </svg>
          <span
            className="visually-hidden"
          >
            In bookmarks
          </span>
        </button>
      </div>
      <div
        className="place-card__rating rating"
      >
        <div
          className="place-card__stars rating__stars"
        >
          <span
            style={
              Object {
                "width": "80%",
              }
            }
          />
          <span
            className="visually-hidden"
          >
            Rating
          </span>
        </div>
      </div>
      <h2
        className="place-card__name"
      >
        Canal View Prinsengracht
      </h2>
      <p
        className="place-card__type"
      >
        Apartment
      </p>
    </div>
  </article>
</a>
`;
